AG-38681 Fix next button and picture navigation button may overlap
Squashed commit of the following:

commit d0d6e2d932d7c045704c40555e18ec1521c2d01a
Merge: 332c81d4 0fd52299
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Feb 13 11:27:33 2025 +0500

    Merge branch 'master' into fix/AG-38681

commit 332c81d4ea3219a4c56a995e469a79e423b4fd41
Merge: ba94d1f7 f9d34a26
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Wed Feb 12 11:43:13 2025 +0500

    Merge branch 'master' into fix/AG-38681

commit ba94d1f78ef68abbee27d991d91919517af80837
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Fri Feb 7 12:14:45 2025 +0500

    fixed height issues 2

commit c475b05c02a3a66adc81a81b9fb8d8729df82879
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Fri Feb 7 11:56:11 2025 +0500

    updated comments

commit bab6bb869aea654d97c219c208468669c499ff24
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Feb 6 19:18:35 2025 +0500

    fixed height issues

commit dcaba89dabca06e6e10361391dd72f9e57a8ec80
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Fri Jan 31 20:18:11 2025 +0500

    added comment

commit 52bf6b18b2e21a02a9874df241ee612393454c6e
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Fri Jan 31 20:15:56 2025 +0500

    fix

commit 172e56d316df3691d0c463d635f5c31d16e5e97d
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Jan 30 15:26:12 2025 +0500

    fixed dots overflow on small screens

commit 75c632d975e7af1dc66f348f6f8a9927ab0b5121
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Jan 30 15:19:43 2025 +0500

    fixed jumping dots

commit 3c3a26d4e1d6c298d1f81fcc8350997a3931e35e
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Jan 30 11:08:03 2025 +0500

    added comments

commit 7c5c9ec6bd47843fc65e929f92a493c6eb1bd773
Merge: f03e5abe 7e3bd915
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Jan 30 10:47:17 2025 +0500

    Merge branch 'm

--- a/src/popup/components/Settings/settings.pcss
+++ b/src/popup/components/Settings/settings.pcss
@@ -55,7 +55,14 @@
 
     &__main {
         text-align: center;
-        padding-top: 220px;
+        /* Adjust padding-top proportionally if actual height of popup (--popup-height) */
+        /* becomes smaller that default height of popup in desktops (--popup-default-height). */
+        /* Design specified padding with value 220px will be base with 100px min padding. */
+        /* This is needed for extension running on mobile browsers where popup height is dynamic. */
+        padding-top: max(
+            100px,
+            calc(220px - var(--popup-default-height) + var(--popup-height))
+        );
     }
 
     &__extra {
