--- a/src/popup/styles/vars.pcss
+++ b/src/popup/styles/vars.pcss
@@ -46,6 +46,7 @@
     --red-gradient: linear-gradient(103deg, #da3434, #ec428a 102%);
     --popup-width: 320px;
     --popup-height: 598px;
+    --popup-default-height: 598px;
     /* TODO: Remove it when popup design will be available in wider screens. */
     --popup-android-max-width: 450px;
     --blue-gradient: linear-gradient(180deg, #E2F5FF -50.38%, #FFFFFF 80%);
